@@ -1308,6 +1308,17 @@ init|=
 name|createNMConfig
 argument_list|()
 decl_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_WORK_PRESERVING_RECOVERY_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|nm
 operator|.
 name|init
