@@ -557,17 +557,6 @@ argument_list|)
 expr_stmt|;
 name|conf
 operator|.
-name|set
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|RECOVERY_ENABLED
-argument_list|,
-literal|"true"
-argument_list|)
-expr_stmt|;
-name|conf
-operator|.
 name|setInt
 argument_list|(
 name|YarnConfiguration
@@ -922,6 +911,28 @@ operator|.
 name|RM_AM_MAX_ATTEMPTS
 argument_list|,
 literal|1
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RECOVERY_ENABLED
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_WORK_PRESERVING_RECOVERY_ENABLED
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|MemoryRMStateStore
