@@ -1597,13 +1597,24 @@ argument_list|)
 expr_stmt|;
 name|conf
 operator|.
-name|set
+name|setBoolean
 argument_list|(
 name|YarnConfiguration
 operator|.
 name|RECOVERY_ENABLED
 argument_list|,
-literal|"true"
+literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_WORK_PRESERVING_RECOVERY_ENABLED
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|conf
