@@ -3364,6 +3364,17 @@ argument_list|)
 expr_stmt|;
 name|conf
 operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_WORK_PRESERVING_RECOVERY_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
 name|set
 argument_list|(
 name|YarnConfiguration
@@ -3780,6 +3791,17 @@ operator|.
 name|RECOVERY_ENABLED
 argument_list|,
 literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_WORK_PRESERVING_RECOVERY_ENABLED
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|conf
@@ -4214,6 +4236,17 @@ operator|.
 name|RECOVERY_ENABLED
 argument_list|,
 literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_WORK_PRESERVING_RECOVERY_ENABLED
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|conf
